# isambard_containers

./: .gitignore  LICENSE  README.md  pyproject.toml  sifter.yaml
.github/workflows/: checks.yaml
definitions/pytorch/: CHANGELOG.md  pytorch.def
definitions/sglang/: CHANGELOG.md  sglang.def
definitions/trl/: CHANGELOG.md  trl.def
definitions/vllm/: CHANGELOG.md  vllm.def
examples/slurm_inspect/: demo_slurm.py  inspect_eval.py
src/isambard_container_tools/: __init__.py
src/isambard_container_tools/_helpers/: lustre.py  pre_download.py
src/isambard_container_tools/benchmarks/: benchmark_allreduce.py  run_benchmark.py
src/isambard_container_tools/engines/vllm/: __init__.py  model_recipes.yaml  recipes.py  serve.py  serve_local.py
src/isambard_container_tools/templates/benchmarks/: benchmark_slingshot.slurm  benchmark_tcp.slurm
src/isambard_container_tools/templates/vllm/: serve_vllm_mp.slurm
tests/: test_recipes.py  test_serve.py
